# rhino-mcp

./: .gitignore  COMPATIBILITY.json  INSTALL.bat  INSTALL_GUIDE.txt  LICENSE  README.md
docs/: MCNEEL_ANALYSIS.md
install/: codex.mcp.example.json  install-rhino-mcp.ps1  rhino-mcp-healthcheck.ps1
plugin/: AIBridgeLogger.cs  AIBridgePlugin.cs  AIBridgeServer.cs  AIBridgeServerController.cs  BatchPlanner.cs  ChangeTracker.cs  CommandHandler.cs  DesignMemory.cs  DisplayModeManager.cs  JobManager.cs  MaterialManager.cs  RedrawScope.cs  RhinoAIBridge.csproj  SceneSnapshot.cs  SceneSnapshotRegistry.cs  SectionManager.cs  SemanticClassifier.cs  TracingManager.cs  TrustManager.cs  UiDispatcher.cs  build.bat
plugin/Commands/: AIBridgeCommands.cs
plugin/Properties/: AssemblyInfo.cs
scripts/: doctor.py  patch_claude_config.py  patch_codex_config.py  patch_config.ps1
server/: INSTALL.bat  README.md  chat.py  pyproject.toml
server/src/rhino_architect/: __init__.py  doctor.py  material_downloader.py  pdf_tracer.py  protocol.py  server.py  validation.py
server/tests/: test_rhino_ai_bridge.py
