[project]
name = "rhino-architect"
version = "4.5.0"
description = "AI Bridge MCP server for Rhino 8 — v4.5 (Phase 1+2+3+5+6)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "orjson>=3.10",
    "openai>=1.0",          # used by chat.py — works for OpenAI, Ollama, and any OAI-compatible endpoint
]

[project.scripts]
rhino-architect = "rhino_architect.server:main"
rhino-chat      = "chat:main"          # uv run rhino-chat  (or: uv run python chat.py)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhino_architect"]
